--- a/index.css
+++ b/index.css
@@ -1,3 +1,144 @@
 * {
 	font-family: Arial, Helvetica, sans-serif;
+	box-sizing: border-box;
+	font-size: 14px;
+}
+
+/* Removes number arrows */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  display: none;
+}
+
+h1, h2 {
+	font-weight: 800;
+	font-size: 24px;
+	margin-bottom: 20px;
+}
+
+main {
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
+}
+
+.cadastro {
+	border: 3px solid black;
+	border-right: 0px;
+	width: 400px;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;;
+	align-items: center;
+}
+
+.input-box {
+	width: 70%;
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+.input-box h3 {
+	margin-bottom: 5px;
+}
+.input-box textarea, .input-box input {
+	width: 100%;
+	text-align: center;
+	padding: 5px;
+}
+
+textarea {
+	height: 150px;
+	resize: none;
+}
+
+.botao-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 240px;
+}
+
+.botao {
+	width: 70%;
+	height: 40px;
+	text-transform: uppercase;
+	font-weight: 600;
+	letter-spacing: 1px;
+	margin-bottom: 15px;
+	border-radius: 5px;
+	border: 0px;
+	box-shadow: 3px 3px #636363;
+	cursor: pointer;
+}
+.botao:hover {
+	filter: brightness(90%);
+}
+.botao:active {
+	transform: translate(1px, 1px);
+	box-shadow: 2px 2px #636363;
+}
+
+#incluirBotao {
+	background-color: green;
+	color: white;
+}
+#atualizarBotao {
+	background-color: antiquewhite;
+}
+#cancelarBotao {
+	background-color: red;
+	color: white;
+}
+#listarBotao {
+	background-color: rgb(218, 218, 218);
+}
+
+.display-none {
+	display: none;
+}
+
+#mensagem-erro {
+	visibility: hidden;
+	color: red;
+}
+
+.lista-produtos {
+	border: 3px solid black;
+	width: 600px;
+
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.tabela-produtos {
+	width: 95%;
+}
+
+.table-heading {
+	font-weight: 700;
+	background-color: #eaeaea;
+}
+
+.tabela-produtos td {
+	height: 40px;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.tabela-produtos img {
+	height: 20px;
+	vertical-align: middle;
+	cursor: pointer;
+}
+
+.id-produto {
+	width: 40px;
+}
+.nome-produto {
+	width: 50%;
 }
