upd: v2.1 Botoes visiveis e invisiveis

--- a/index.css
+++ b/index.css
@@ -7,10 +7,11 @@
 /* Removes number arrows */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  display: none;
+	display: none;
 }
 
-h1, h2 {
+h1,
+h2 {
 	font-weight: 800;
 	font-size: 24px;
 	margin-bottom: 20px;
@@ -28,7 +29,7 @@ main {
 	width: 400px;
 	padding: 20px;
 	display: flex;
-	flex-direction: column;;
+	flex-direction: column;
 	align-items: center;
 }
 
@@ -41,7 +42,8 @@ main {
 .input-box h3 {
 	margin-bottom: 5px;
 }
-.input-box textarea, .input-box input {
+.input-box textarea,
+.input-box input {
 	width: 100%;
 	text-align: center;
 	padding: 5px;
@@ -141,4 +143,8 @@ textarea {
 }
 .nome-produto {
 	width: 50%;
+	cursor: pointer;
+}
+.nome-produto:hover {
+	color: #636363;
 }
